--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: qbonvin <qbonvin@student.42.fr>            +#+  +:+       +#+         #
+#    By: nnemeth <nnemeth@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/29 16:22:29 by qbonvin           #+#    #+#              #
-#    Updated: 2022/03/14 17:25:07 by qbonvin          ###   ########.fr        #
+#    Updated: 2022/10/04 11:28:40 by nnemeth          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
